# Dissertation-IDS

./: #  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dataset  Dockerfile-python  README.md  docker-compose.yml  models.py
dataset/: preprocess-test-network-attack.csv  preprocess-test-network-standard-webtraffic.csv  preprocess-test-network-standard.pcap  test-network-attack.csv  test-network-attack.pcap  test-network-standard-webtraffic-validate.csv  test-network-standard-webtraffic-validate.pcap  test-network-standard-webtraffic.pcap  test-network-standard.pcap
dataset/preprocessed/: dataset-attack.csv  preprocess-test-network-attack.csv  preprocess-test-network-standard-webtraffic-validate.csv  preprocess-test-network-standard-webtraffic.csv  test-network-standard-webtraffic.csv
libglog/: libglog.so.0.6.0
pages/: data.html  index.html  model.html  nomodel.html  nopermissions.html  train.html
src/: #  deep_learn.rs  main.rs  monitor_network.rs  packet_capture.rs  preprocess.rs
static/js/: create-model-script.js  generate-main-chart.js  network-graph.js  process-script.js  test-gettraffic.js  test-script.js  testwebsocket.js  train-script.js
static/pages/: #index.html#  .#index.html  data.html  index.html  model.html  retrain.html  test.html  train.html
