[package]
name = "ids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.14.2"
libc = "0.2.153"
linfa = "0.7.0"
pcap = "1.2.0"
rocket = {version="0.5.0", features=["json"]}
rocket_ws = "0.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
tch = "0.15.0"
tokio = {version = "1.36.0", features = ["full"]}
