[package]
name = "ids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.14.2"
rocket = {version="0.5.0", features=["json"]}
rocket_ws = "0.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
linfa = "0.7.0"
linfa-datasets = "0.7.0"
linfa-reduction = "0.7.0"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
csv = "1.3.0"
linfa-preprocessing = "0.7.0"
reqwest = {version="0.12.4", features=["json"]}
pnet = "0.34.0"
